--- a/KatyProject/KatyProject/KatyProject.csproj
+++ b/KatyProject/KatyProject/KatyProject.csproj
@@ -35,6 +35,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadHelper.cs" />
+    <Compile Include="ClubPremier.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
