--- a/KatyProject/KatyProject/Reservación_Vuelos.csproj
+++ b/KatyProject/KatyProject/Reservación_Vuelos.csproj
@@ -43,13 +43,14 @@
     <Reference Include="ConsoleTables">
       <HintPath>..\packages\ConsoleTables.2.1.0\lib\net40\ConsoleTables.dll</HintPath>
     </Reference>
+    <Reference Include="ReadHelperLibrary">
+      <HintPath>..\..\..\Projects\ReadHelperLibrary.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AltaCiudades.cs" />
     <Compile Include="Ciudad.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReadHelper.cs" />
     <Compile Include="Vuelo.cs" />
     <Compile Include="ClubPremier.cs" />
     <Compile Include="Boleto.cs" />
