--- a/ProyectoVuelos/ProyectoVuelos/ProyectoVuelos.csproj
+++ b/ProyectoVuelos/ProyectoVuelos/ProyectoVuelos.csproj
@@ -49,6 +49,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -80,6 +81,12 @@
     </Compile>
     <Compile Include="frmAltaVuelo.Designer.cs">
       <DependentUpon>frmAltaVuelo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmCharts.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmCharts.Designer.cs">
+      <DependentUpon>frmCharts.cs</DependentUpon>
     </Compile>
     <Compile Include="frmCompraBoleto.cs">
       <SubType>Form</SubType>
@@ -140,6 +147,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmAltaVuelo.resx">
       <DependentUpon>frmAltaVuelo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmCharts.resx">
+      <DependentUpon>frmCharts.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmCompraBoleto.resx">
       <DependentUpon>frmCompraBoleto.cs</DependentUpon>
