--- a/ProyectoVuelos/ProyectoVuelos/ProyectoVuelos.csproj
+++ b/ProyectoVuelos/ProyectoVuelos/ProyectoVuelos.csproj
@@ -32,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Bunifu_UI_v1.5.3">
+      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Bunifu Technologies\Bunifu Framework Manager\Bunifu_UI_v1.5.3.dll</HintPath>
+    </Reference>
     <Reference Include="DHTMLX, Version=3.3.6344.35683, Culture=neutral, PublicKeyToken=53f24791214eb8ac, processorArchitecture=MSIL">
       <HintPath>..\packages\DHTMLX.Scheduler.NET.3.3.27.0\lib\DHTMLX.dll</HintPath>
       <Private>True</Private>
@@ -71,12 +74,14 @@
     <Reference Include="LibreriaBD">
       <HintPath>..\..\LibreriaBD.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\gmaps-api-net.0.14.51\lib\net\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Management" />
     <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -173,6 +178,12 @@
     <Compile Include="frmMenu.Designer.cs">
       <DependentUpon>frmMenu.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmMenuPrincipal.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmMenuPrincipal.Designer.cs">
+      <DependentUpon>frmMenuPrincipal.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="frmAltaCiudad.resx">
@@ -216,6 +227,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmMenu.resx">
       <DependentUpon>frmMenu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmMenuPrincipal.resx">
+      <DependentUpon>frmMenuPrincipal.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -442,6 +456,18 @@
     <Content Include="Content\dhtmlxscheduler\sources\skins\dhtmlxscheduler_contrast_white.css" />
     <Content Include="Content\dhtmlxscheduler\sources\skins\dhtmlxscheduler_flat.css" />
     <Content Include="Content\dhtmlxscheduler\sources\skins\dhtmlxscheduler_glossy.css" />
+    <None Include="Resources\icons8-west_direction.png" />
+    <None Include="Resources\logo1.png" />
+    <None Include="Resources\logo2.png" />
+    <None Include="Resources\icons8-airport.png" />
+    <None Include="Resources\icons8-ticket.png" />
+    <None Include="Resources\icons8-group_foreground_selected_filled.png" />
+    <None Include="Resources\icons8-christmas_star_filled.png" />
+    <None Include="Resources\icons8-rebalance_portfolio.png" />
+    <None Include="Resources\icons8-chevron_left_round.png" />
+    <None Include="Resources\icons8-up_arrow.png" />
+    <None Include="Resources\icons8-search_filled.png" />
+    <None Include="Resources\fic.png" />
     <Content Include="Scripts\dhtmlxScheduler\dhtmlxscheduler.css" />
     <Content Include="Scripts\dhtmlxScheduler\dhtmlxscheduler.js" />
     <Content Include="Scripts\dhtmlxScheduler\dhtmlxscheduler_classic.css" />
