--- a/ProyectoVuelos/ProyectoVuelos/App.config
+++ b/ProyectoVuelos/ProyectoVuelos/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="ProyectoVuelos.Properties.Settings.reservación_vuelosConnectionString"
+            connectionString="Data Source=KARENGGV-PC\KARENGGV;Initial Catalog=reservación_vuelos;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
